trame-toy-postcard/src/snapshots/trame_toy_postcard__tests__compile_demo3_program_sexp.snap
---
source: trame-toy-postcard/src/lib.rs
expression: plan.program().to_sexp()
---
(postcard-decode-program
  (register-count 3)
  (instructions
    (read-scalar (kind u32) (dst r0))
    (write-field-from-reg (field 0) (src r0))
    (read-scalar (kind string) (dst r1))
    (write-field-from-reg (field 1) (src r1))
    (read-scalar (kind bool) (dst r2))
    (write-field-from-reg (field 2) (src r2))
    (require-eof)
  )
)
