trame-toy-postcard/src/snapshots/trame_toy_postcard__tests__compile_demo_program_sexp.snap
---
source: trame-toy-postcard/src/lib.rs
expression: plan.program().to_sexp()
---
(postcard-decode-program
  (register-count 2)
  (instructions
    (read-scalar (kind u32) (dst r0))
    (write-field-from-reg (field 0) (src r0))
    (read-scalar (kind string) (dst r1))
    (write-field-from-reg (field 1) (src r1))
    (require-eof)
  )
)
